add rmt ping monitor

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "tsc && node dist/deploy-commands.js",
-    "delete": "tsc && node dist/delete-commands.js"
+    "delete": "tsc && node dist/delete-commands.js",
+    "build": "tst"
   },
   "author": "",
   "license": "ISC",
