--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^18.8.2",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
+    "tslib": "^2.4.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
