--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "sf typescript discord bot",
   "main": "dist/chatot.js",
+  "type": "module",
   "scripts": {
     "start": "tsc && node dist/chatot.js",
     "lint": "eslint . --ext .ts",
@@ -15,8 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.8.2",
+    "@types/pg": "^8.6.6",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
+    "pg": "^8.9.0",
     "tslib": "^2.4.1",
     "typescript": "^4.8.4"
   },
