--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/pg": "^8.6.6",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
+    "esbuild": "^0.17.8",
     "pg": "^8.9.0",
     "tslib": "^2.4.1",
     "typescript": "^4.8.4"
