remove floating promise and update readme

--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "dist/chatot.js",
   "type": "module",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "start": "rm -r dist && tsc --build && node dist/chatot.js",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "rm -r dist && tsc --build && node dist/deploy-commands.js",
-    "delete": "rm -r dist && tsc --build && node dist/delete-commands.js",
     "build-paranoid": "rm -r dist && tsc --build",
     "build": "tsc --build"
   },
