--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
     "esbuild": "^0.17.8",
+    "mysql2": "^3.3.3",
     "pg": "^8.9.0",
     "tslib": "^2.4.1",
     "typescript": "^4.8.4"
