--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
 		"keyword-spacing": "error",
 		"max-nested-callbacks": ["error", { "max": 4 }],
 		"max-statements-per-line": ["error", { "max": 2 }],
+		"no-base-to-string": "off",
 		"no-console": "off",
 		"no-empty-function": "error",
 		"no-floating-decimal": "error",
