add sticky and context menu commands

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,8 @@
 		"no-shadow": "off",
 		"@typescript-eslint/no-shadow": ["error"],
 		"no-var": "error",
+		"no-unused-vars": "off",
+		"@typescript-eslint/no-unused-vars": "warn",
 		"object-curly-spacing": ["error", "always"],
 		"prefer-const": "error",
 		"quotes": ["error", "single"],
