--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.4.7",
+    "@types/node": "^20.6.2",
     "@types/pg": "^8.10.2",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "esbuild": "^0.18.17",
     "mysql2": "^3.6.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.2",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6"
