--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.6.2",
-    "@types/pg": "^8.10.2",
-    "discord.js": "^14.12.1",
-    "dotenv": "^16.3.1",
-    "esbuild": "^0.18.17",
+    "@types/node": "^20.12.7",
+    "@types/pg": "^8.11.5",
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.4.5",
+    "esbuild": "^0.20.2",
     "mysql2": "^3.9.4",
-    "pg": "^8.11.2",
-    "tslib": "^2.6.1",
-    "typescript": "^5.1.6"
+    "pg": "^8.11.5",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "eslint": "^8.46.0"
+    "@eslint/js": "^9.0.0",
+    "eslint": "^8.56.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.6.0"
   }
 }
