set ts-node swc flag to true

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,8 @@
 .env
 .eslintcache
 .DS_Store
-/src/db/raters.json
-/src/db/cooldown.json
 .devcontainer
 .vscode
 .cache
 .pnpm-store
+*.tsbuildinfo
