--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
+    "@swc/core": "^1.4.17",
     "@types/node": "^20.12.7",
     "@types/pg": "^8.11.5",
     "eslint": "^8.57.0",
